--- a/dog_walks/templates/base/list_content.html
+++ b/dog_walks/templates/base/list_content.html
@@ -44,13 +44,13 @@
             <div class="pagin">
                 {% if page_obj.has_previous %}
                     <a href="?page=1">1</a>
-                    <a href="?page={{ page_obj.previous_page_number }}"><<</a>
+                    <a href="?page={{ page_obj.previous_page_number }}">&laquo;</a>
                 {% endif %}
 
                 {{ page_obj.number }} / {{ page_obj.paginator.num_pages }}.
 
                 {% if page_obj.has_next %}
-                    <a href="?page={{ page_obj.next_page_number }}">>></a>
+                    <a href="?page={{ page_obj.next_page_number }}">&raquo;</a>
                     <a href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
                 {% endif %}
             </div>
