--- a/dog_walks/templates/base/places_comments.html
+++ b/dog_walks/templates/base/places_comments.html
@@ -30,13 +30,13 @@
             <div class="pagin">
                 {% if comments.has_previous %}
                     <a href="?page=1">1</a>
-                    <a href="?page={{ comments.previous_page_number }}"><<</a>
+                    <a href="?page={{ comments.previous_page_number }}">&laquo;</a>
                 {% endif %}
 
                 {{ comments.number }} / {{ comments.paginator.num_pages }}.
 
                 {% if comments.has_next %}
-                    <a href="?page={{ comments.next_page_number }}">>></a>
+                    <a href="?page={{ comments.next_page_number }}">&raquo;</a>
                     <a href="?page={{ comments.paginator.num_pages }}">{{ comments.paginator.num_pages }}</a>
                 {% endif %}
             </div>
